--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,21 +3,25 @@ name: Build Next.JS
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: 15.x
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 15
+          registry-url: https://registry.npmjs.org/
       - run: yarn
       - run: yarn build
       - run: yarn export
+      - name: Configure git identity
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+      - name: Stage, commit & push changes
+        run: |
+          git add .
+          git commit -m  "📝 docs: auto build triggered"
+          git push origin main
