--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "export": "next export"
   },
   "dependencies": {
+    "@types/three": "^0.128.0",
     "gray-matter": "^4.0.3",
     "marked": "^2.0.3",
     "next": "^10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "three": "^0.128.0"
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
