--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,14 @@
 
 # next.js
 /.next/
+/out/
 
 # production
 /build
-/out
+
 # misc
 .DS_Store
+*.pem
 
 # debug
 npm-debug.log*
@@ -27,3 +29,6 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# vercel
+.vercel
